# monthly-report-job-

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  entrypoint.sh  pyproject.toml  run_job.sh  schema.sql
src/: __main__.py  config.py  pipeline.py
src/concern/: concern_cluster.py  concern_report.py
src/data/: chat_data_processor.py  cluster_metadata_helpers.py  db_session_reader.py  firebase_manager.py  raw_data_client.py  vector_helpers.py
src/organize/: organize_reports.py
src/report/: analysis.py  monthly_pdf.py  report_builder.py
src/theme_clustering/: ARCHITECTURE.md  THRESHOLDS_GUIDE.md  __init__.py  extract_misc_messages.py  test_hdbscan_sampling.py  theme_assignment.py  theme_clustering.py  theme_config.py  theme_discovery.py  theme_embedding.py  theme_html_report.py  theme_models.py  theme_preprocessing.py  theme_prompts.py  theme_quality.py  theme_sampling.py  theme_second_pass.py  theme_voc_report.py
src/utils/: convert_concern_to_old_format.py  convert_voc_to_old_format.py  db_writer_util.py  job_status_tracker.py  openai_utils.py  slack_notification.py  storage_service.py
